Add global sound toggle with persistent user preference

--- a/animals.html
+++ b/animals.html
@@ -31,5 +31,7 @@
   </main>
 
   <script src="js/animals.js"></script>
+  <script src="js/confetti.js"></script>
+  <script src="js/sound.js"></script>
 </body>
 </html>
