--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
     <p>Made with ❤️ for kids</p>
   </footer>
 
+<script src="js/sound.js"></script>
+<script src="js/confetti.js"></script>
+
 </body>
 </html>
