--- a/alphabet.html
+++ b/alphabet.html
@@ -33,6 +33,8 @@
     <!-- JS will generate letters here -->
   </main>
 
-  <script src="js/alphabet.js"></script>
+    <script src="js/sound.js"></script>
+    <script src="js/confetti.js"></script>
+    <script src="js/alphabet.js"></script>  
 </body>
 </html>
