--- a/numbers.html
+++ b/numbers.html
@@ -34,5 +34,7 @@
   </main>
 
   <script src="js/numbers.js"></script>
+  <script src="js/confetti.js"></script>
+  <script src="js/sound.js"></script>
 </body>
 </html>
