Enhance user engagement with animal sounds, quiz difficulty levels, interactive mascot feedback, and expressive speech tuning

--- a/quiz.html
+++ b/quiz.html
@@ -26,6 +26,12 @@
   </section>
 
   <main class="quiz-container">
+    <select id="difficulty">
+  <option value="2">Easy</option>
+  <option value="4" selected>Medium</option>
+  <option value="6">Hard</option>
+</select>
+
     <button id="play-sound" class="primary-btn">🔊 Play Sound</button>
 
     <div id="quiz-options" class="quiz-options">
