Add user profiles, progress dashboard, phonics mode, and enhanced navigation

--- a/quiz.html
+++ b/quiz.html
@@ -40,9 +40,10 @@
 
     <p id="score-display">Score: 0</p>
   </main>
-
+  <script src="js/profile.js"></script>
   <script src="js/sound.js"></script>
   <script src="js/confetti.js"></script>
+  <script src="js/progress.js"></script>
   <script src="js/quiz.js"></script>
 </body>
 </html>
