feat: add progress bar visualization and achievement badges

--- a/progress.html
+++ b/progress.html
@@ -15,6 +15,12 @@
 <main class="quiz-container">
   <h2 id="kid-greeting"></h2>
   <p id="progress-stats"></p>
+  <div class="progress-wrapper">
+  <div id="progress-bar"></div>
+</div>
+
+<div id="badges-container"></div>
+
 </main>
 
 <script src="js/profile.js"></script>
