feat: add profiles page link to main navigation

--- a/alphabet.html
+++ b/alphabet.html
@@ -32,7 +32,7 @@
   <main id="alphabet-container" class="cards">
     <!-- JS will generate letters here -->
   </main>
-
+    <script src="js/profile.js"></script>
     <script src="js/sound.js"></script>
     <script src="js/confetti.js"></script>
     <script src="js/alphabet.js"></script>  
