--- a/animals.html
+++ b/animals.html
@@ -29,7 +29,7 @@
   <main id="animals-container" class="cards">
     <!-- JS will generate animals -->
   </main>
-
+  <script src="js/profile.js"></script>
   <script src="js/animals.js"></script>
   <script src="js/confetti.js"></script>
   <script src="js/sound.js"></script>
