--- a/index.html
+++ b/index.html
@@ -46,12 +46,20 @@
       <p>Dog • Cat • Lion</p>
     </a>
 
+    <a href="quiz.html" class="card">🧠 Quiz Time</a>
+
+   <a href="progress.html" class="card">📊 My Progress</a>
+
+   <a href="profiles.html" class="card">👨‍👩‍👧 Profiles</a>
+
+
+
   </main>
 
   <footer class="footer">
     <p>Made with ❤️ for kids</p>
   </footer>
-
+<script src="js/profile.js"></script>
 <script src="js/sound.js"></script>
 <script src="js/confetti.js"></script>
 
