--- a/numbers.html
+++ b/numbers.html
@@ -32,7 +32,7 @@
   <main id="numbers-container" class="cards">
     <!-- JS will generate numbers -->
   </main>
-
+  <script src="js/profile.js"></script>
   <script src="js/numbers.js"></script>
   <script src="js/confetti.js"></script>
   <script src="js/sound.js"></script>
